--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "better-scroll": "^2.0.6",
     "fastclick": "^1.0.6",
     "swiper": "^6.3.5",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^4.1.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
